parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expressao
Rule 1     expressao -> frase
Rule 2     expressao -> empty
Rule 3     frase -> palavra SPACE frase
Rule 4     frase -> palavra
Rule 5     palavra -> upperCase palavra
Rule 6     palavra -> lowerCase palavra
Rule 7     palavra -> upperCase
Rule 8     palavra -> lowerCase
Rule 9     upperCase -> A
Rule 10    upperCase -> B
Rule 11    upperCase -> C
Rule 12    upperCase -> D
Rule 13    upperCase -> E
Rule 14    upperCase -> F
Rule 15    upperCase -> G
Rule 16    upperCase -> H
Rule 17    upperCase -> I
Rule 18    upperCase -> J
Rule 19    upperCase -> K
Rule 20    upperCase -> L
Rule 21    upperCase -> M
Rule 22    upperCase -> N
Rule 23    upperCase -> O
Rule 24    upperCase -> P
Rule 25    upperCase -> Q
Rule 26    upperCase -> R
Rule 27    upperCase -> S
Rule 28    upperCase -> T
Rule 29    upperCase -> U
Rule 30    upperCase -> V
Rule 31    upperCase -> X
Rule 32    upperCase -> W
Rule 33    upperCase -> Y
Rule 34    upperCase -> Z
Rule 35    lowerCase -> a
Rule 36    lowerCase -> b
Rule 37    lowerCase -> c
Rule 38    lowerCase -> d
Rule 39    lowerCase -> e
Rule 40    lowerCase -> f
Rule 41    lowerCase -> g
Rule 42    lowerCase -> h
Rule 43    lowerCase -> i
Rule 44    lowerCase -> j
Rule 45    lowerCase -> k
Rule 46    lowerCase -> l
Rule 47    lowerCase -> m
Rule 48    lowerCase -> n
Rule 49    lowerCase -> o
Rule 50    lowerCase -> p
Rule 51    lowerCase -> q
Rule 52    lowerCase -> r
Rule 53    lowerCase -> s
Rule 54    lowerCase -> t
Rule 55    lowerCase -> u
Rule 56    lowerCase -> v
Rule 57    lowerCase -> x
Rule 58    lowerCase -> w
Rule 59    lowerCase -> y
Rule 60    lowerCase -> z
Rule 61    empty -> <empty>

Terminals, with rules where they appear

A                    : 9
B                    : 10
C                    : 11
D                    : 12
E                    : 13
F                    : 14
G                    : 15
H                    : 16
I                    : 17
J                    : 18
K                    : 19
L                    : 20
M                    : 21
N                    : 22
O                    : 23
P                    : 24
Q                    : 25
R                    : 26
S                    : 27
SPACE                : 3
T                    : 28
U                    : 29
V                    : 30
W                    : 32
X                    : 31
Y                    : 33
Z                    : 34
a                    : 35
b                    : 36
c                    : 37
d                    : 38
e                    : 39
error                : 
f                    : 40
g                    : 41
h                    : 42
i                    : 43
j                    : 44
k                    : 45
l                    : 46
m                    : 47
n                    : 48
o                    : 49
p                    : 50
q                    : 51
r                    : 52
s                    : 53
t                    : 54
u                    : 55
v                    : 56
w                    : 58
x                    : 57
y                    : 59
z                    : 60

Nonterminals, with rules where they appear

empty                : 2
expressao            : 0
frase                : 1 3
lowerCase            : 6 8
palavra              : 3 4 5 6
upperCase            : 5 7

Parsing method: LALR

state 0

    (0) S' -> . expressao
    (1) expressao -> . frase
    (2) expressao -> . empty
    (3) frase -> . palavra SPACE frase
    (4) frase -> . palavra
    (61) empty -> .
    (5) palavra -> . upperCase palavra
    (6) palavra -> . lowerCase palavra
    (7) palavra -> . upperCase
    (8) palavra -> . lowerCase
    (9) upperCase -> . A
    (10) upperCase -> . B
    (11) upperCase -> . C
    (12) upperCase -> . D
    (13) upperCase -> . E
    (14) upperCase -> . F
    (15) upperCase -> . G
    (16) upperCase -> . H
    (17) upperCase -> . I
    (18) upperCase -> . J
    (19) upperCase -> . K
    (20) upperCase -> . L
    (21) upperCase -> . M
    (22) upperCase -> . N
    (23) upperCase -> . O
    (24) upperCase -> . P
    (25) upperCase -> . Q
    (26) upperCase -> . R
    (27) upperCase -> . S
    (28) upperCase -> . T
    (29) upperCase -> . U
    (30) upperCase -> . V
    (31) upperCase -> . X
    (32) upperCase -> . W
    (33) upperCase -> . Y
    (34) upperCase -> . Z
    (35) lowerCase -> . a
    (36) lowerCase -> . b
    (37) lowerCase -> . c
    (38) lowerCase -> . d
    (39) lowerCase -> . e
    (40) lowerCase -> . f
    (41) lowerCase -> . g
    (42) lowerCase -> . h
    (43) lowerCase -> . i
    (44) lowerCase -> . j
    (45) lowerCase -> . k
    (46) lowerCase -> . l
    (47) lowerCase -> . m
    (48) lowerCase -> . n
    (49) lowerCase -> . o
    (50) lowerCase -> . p
    (51) lowerCase -> . q
    (52) lowerCase -> . r
    (53) lowerCase -> . s
    (54) lowerCase -> . t
    (55) lowerCase -> . u
    (56) lowerCase -> . v
    (57) lowerCase -> . x
    (58) lowerCase -> . w
    (59) lowerCase -> . y
    (60) lowerCase -> . z

    $end            reduce using rule 61 (empty -> .)
    A               shift and go to state 7
    B               shift and go to state 8
    C               shift and go to state 9
    D               shift and go to state 10
    E               shift and go to state 11
    F               shift and go to state 12
    G               shift and go to state 13
    H               shift and go to state 14
    I               shift and go to state 15
    J               shift and go to state 16
    K               shift and go to state 17
    L               shift and go to state 18
    M               shift and go to state 19
    N               shift and go to state 20
    O               shift and go to state 21
    P               shift and go to state 22
    Q               shift and go to state 23
    R               shift and go to state 24
    S               shift and go to state 25
    T               shift and go to state 26
    U               shift and go to state 27
    V               shift and go to state 28
    X               shift and go to state 29
    W               shift and go to state 30
    Y               shift and go to state 31
    Z               shift and go to state 32
    a               shift and go to state 33
    b               shift and go to state 34
    c               shift and go to state 35
    d               shift and go to state 36
    e               shift and go to state 37
    f               shift and go to state 38
    g               shift and go to state 39
    h               shift and go to state 40
    i               shift and go to state 41
    j               shift and go to state 42
    k               shift and go to state 43
    l               shift and go to state 44
    m               shift and go to state 45
    n               shift and go to state 46
    o               shift and go to state 47
    p               shift and go to state 48
    q               shift and go to state 49
    r               shift and go to state 50
    s               shift and go to state 51
    t               shift and go to state 52
    u               shift and go to state 53
    v               shift and go to state 54
    x               shift and go to state 55
    w               shift and go to state 56
    y               shift and go to state 57
    z               shift and go to state 58

    expressao                      shift and go to state 1
    frase                          shift and go to state 2
    empty                          shift and go to state 3
    palavra                        shift and go to state 4
    upperCase                      shift and go to state 5
    lowerCase                      shift and go to state 6

state 1

    (0) S' -> expressao .



state 2

    (1) expressao -> frase .

    $end            reduce using rule 1 (expressao -> frase .)


state 3

    (2) expressao -> empty .

    $end            reduce using rule 2 (expressao -> empty .)


state 4

    (3) frase -> palavra . SPACE frase
    (4) frase -> palavra .

    SPACE           shift and go to state 59
    $end            reduce using rule 4 (frase -> palavra .)


state 5

    (5) palavra -> upperCase . palavra
    (7) palavra -> upperCase .
    (5) palavra -> . upperCase palavra
    (6) palavra -> . lowerCase palavra
    (7) palavra -> . upperCase
    (8) palavra -> . lowerCase
    (9) upperCase -> . A
    (10) upperCase -> . B
    (11) upperCase -> . C
    (12) upperCase -> . D
    (13) upperCase -> . E
    (14) upperCase -> . F
    (15) upperCase -> . G
    (16) upperCase -> . H
    (17) upperCase -> . I
    (18) upperCase -> . J
    (19) upperCase -> . K
    (20) upperCase -> . L
    (21) upperCase -> . M
    (22) upperCase -> . N
    (23) upperCase -> . O
    (24) upperCase -> . P
    (25) upperCase -> . Q
    (26) upperCase -> . R
    (27) upperCase -> . S
    (28) upperCase -> . T
    (29) upperCase -> . U
    (30) upperCase -> . V
    (31) upperCase -> . X
    (32) upperCase -> . W
    (33) upperCase -> . Y
    (34) upperCase -> . Z
    (35) lowerCase -> . a
    (36) lowerCase -> . b
    (37) lowerCase -> . c
    (38) lowerCase -> . d
    (39) lowerCase -> . e
    (40) lowerCase -> . f
    (41) lowerCase -> . g
    (42) lowerCase -> . h
    (43) lowerCase -> . i
    (44) lowerCase -> . j
    (45) lowerCase -> . k
    (46) lowerCase -> . l
    (47) lowerCase -> . m
    (48) lowerCase -> . n
    (49) lowerCase -> . o
    (50) lowerCase -> . p
    (51) lowerCase -> . q
    (52) lowerCase -> . r
    (53) lowerCase -> . s
    (54) lowerCase -> . t
    (55) lowerCase -> . u
    (56) lowerCase -> . v
    (57) lowerCase -> . x
    (58) lowerCase -> . w
    (59) lowerCase -> . y
    (60) lowerCase -> . z

    SPACE           reduce using rule 7 (palavra -> upperCase .)
    $end            reduce using rule 7 (palavra -> upperCase .)
    A               shift and go to state 7
    B               shift and go to state 8
    C               shift and go to state 9
    D               shift and go to state 10
    E               shift and go to state 11
    F               shift and go to state 12
    G               shift and go to state 13
    H               shift and go to state 14
    I               shift and go to state 15
    J               shift and go to state 16
    K               shift and go to state 17
    L               shift and go to state 18
    M               shift and go to state 19
    N               shift and go to state 20
    O               shift and go to state 21
    P               shift and go to state 22
    Q               shift and go to state 23
    R               shift and go to state 24
    S               shift and go to state 25
    T               shift and go to state 26
    U               shift and go to state 27
    V               shift and go to state 28
    X               shift and go to state 29
    W               shift and go to state 30
    Y               shift and go to state 31
    Z               shift and go to state 32
    a               shift and go to state 33
    b               shift and go to state 34
    c               shift and go to state 35
    d               shift and go to state 36
    e               shift and go to state 37
    f               shift and go to state 38
    g               shift and go to state 39
    h               shift and go to state 40
    i               shift and go to state 41
    j               shift and go to state 42
    k               shift and go to state 43
    l               shift and go to state 44
    m               shift and go to state 45
    n               shift and go to state 46
    o               shift and go to state 47
    p               shift and go to state 48
    q               shift and go to state 49
    r               shift and go to state 50
    s               shift and go to state 51
    t               shift and go to state 52
    u               shift and go to state 53
    v               shift and go to state 54
    x               shift and go to state 55
    w               shift and go to state 56
    y               shift and go to state 57
    z               shift and go to state 58

    upperCase                      shift and go to state 5
    palavra                        shift and go to state 60
    lowerCase                      shift and go to state 6

state 6

    (6) palavra -> lowerCase . palavra
    (8) palavra -> lowerCase .
    (5) palavra -> . upperCase palavra
    (6) palavra -> . lowerCase palavra
    (7) palavra -> . upperCase
    (8) palavra -> . lowerCase
    (9) upperCase -> . A
    (10) upperCase -> . B
    (11) upperCase -> . C
    (12) upperCase -> . D
    (13) upperCase -> . E
    (14) upperCase -> . F
    (15) upperCase -> . G
    (16) upperCase -> . H
    (17) upperCase -> . I
    (18) upperCase -> . J
    (19) upperCase -> . K
    (20) upperCase -> . L
    (21) upperCase -> . M
    (22) upperCase -> . N
    (23) upperCase -> . O
    (24) upperCase -> . P
    (25) upperCase -> . Q
    (26) upperCase -> . R
    (27) upperCase -> . S
    (28) upperCase -> . T
    (29) upperCase -> . U
    (30) upperCase -> . V
    (31) upperCase -> . X
    (32) upperCase -> . W
    (33) upperCase -> . Y
    (34) upperCase -> . Z
    (35) lowerCase -> . a
    (36) lowerCase -> . b
    (37) lowerCase -> . c
    (38) lowerCase -> . d
    (39) lowerCase -> . e
    (40) lowerCase -> . f
    (41) lowerCase -> . g
    (42) lowerCase -> . h
    (43) lowerCase -> . i
    (44) lowerCase -> . j
    (45) lowerCase -> . k
    (46) lowerCase -> . l
    (47) lowerCase -> . m
    (48) lowerCase -> . n
    (49) lowerCase -> . o
    (50) lowerCase -> . p
    (51) lowerCase -> . q
    (52) lowerCase -> . r
    (53) lowerCase -> . s
    (54) lowerCase -> . t
    (55) lowerCase -> . u
    (56) lowerCase -> . v
    (57) lowerCase -> . x
    (58) lowerCase -> . w
    (59) lowerCase -> . y
    (60) lowerCase -> . z

    SPACE           reduce using rule 8 (palavra -> lowerCase .)
    $end            reduce using rule 8 (palavra -> lowerCase .)
    A               shift and go to state 7
    B               shift and go to state 8
    C               shift and go to state 9
    D               shift and go to state 10
    E               shift and go to state 11
    F               shift and go to state 12
    G               shift and go to state 13
    H               shift and go to state 14
    I               shift and go to state 15
    J               shift and go to state 16
    K               shift and go to state 17
    L               shift and go to state 18
    M               shift and go to state 19
    N               shift and go to state 20
    O               shift and go to state 21
    P               shift and go to state 22
    Q               shift and go to state 23
    R               shift and go to state 24
    S               shift and go to state 25
    T               shift and go to state 26
    U               shift and go to state 27
    V               shift and go to state 28
    X               shift and go to state 29
    W               shift and go to state 30
    Y               shift and go to state 31
    Z               shift and go to state 32
    a               shift and go to state 33
    b               shift and go to state 34
    c               shift and go to state 35
    d               shift and go to state 36
    e               shift and go to state 37
    f               shift and go to state 38
    g               shift and go to state 39
    h               shift and go to state 40
    i               shift and go to state 41
    j               shift and go to state 42
    k               shift and go to state 43
    l               shift and go to state 44
    m               shift and go to state 45
    n               shift and go to state 46
    o               shift and go to state 47
    p               shift and go to state 48
    q               shift and go to state 49
    r               shift and go to state 50
    s               shift and go to state 51
    t               shift and go to state 52
    u               shift and go to state 53
    v               shift and go to state 54
    x               shift and go to state 55
    w               shift and go to state 56
    y               shift and go to state 57
    z               shift and go to state 58

    lowerCase                      shift and go to state 6
    palavra                        shift and go to state 61
    upperCase                      shift and go to state 5

state 7

    (9) upperCase -> A .

    A               reduce using rule 9 (upperCase -> A .)
    B               reduce using rule 9 (upperCase -> A .)
    C               reduce using rule 9 (upperCase -> A .)
    D               reduce using rule 9 (upperCase -> A .)
    E               reduce using rule 9 (upperCase -> A .)
    F               reduce using rule 9 (upperCase -> A .)
    G               reduce using rule 9 (upperCase -> A .)
    H               reduce using rule 9 (upperCase -> A .)
    I               reduce using rule 9 (upperCase -> A .)
    J               reduce using rule 9 (upperCase -> A .)
    K               reduce using rule 9 (upperCase -> A .)
    L               reduce using rule 9 (upperCase -> A .)
    M               reduce using rule 9 (upperCase -> A .)
    N               reduce using rule 9 (upperCase -> A .)
    O               reduce using rule 9 (upperCase -> A .)
    P               reduce using rule 9 (upperCase -> A .)
    Q               reduce using rule 9 (upperCase -> A .)
    R               reduce using rule 9 (upperCase -> A .)
    S               reduce using rule 9 (upperCase -> A .)
    T               reduce using rule 9 (upperCase -> A .)
    U               reduce using rule 9 (upperCase -> A .)
    V               reduce using rule 9 (upperCase -> A .)
    X               reduce using rule 9 (upperCase -> A .)
    W               reduce using rule 9 (upperCase -> A .)
    Y               reduce using rule 9 (upperCase -> A .)
    Z               reduce using rule 9 (upperCase -> A .)
    a               reduce using rule 9 (upperCase -> A .)
    b               reduce using rule 9 (upperCase -> A .)
    c               reduce using rule 9 (upperCase -> A .)
    d               reduce using rule 9 (upperCase -> A .)
    e               reduce using rule 9 (upperCase -> A .)
    f               reduce using rule 9 (upperCase -> A .)
    g               reduce using rule 9 (upperCase -> A .)
    h               reduce using rule 9 (upperCase -> A .)
    i               reduce using rule 9 (upperCase -> A .)
    j               reduce using rule 9 (upperCase -> A .)
    k               reduce using rule 9 (upperCase -> A .)
    l               reduce using rule 9 (upperCase -> A .)
    m               reduce using rule 9 (upperCase -> A .)
    n               reduce using rule 9 (upperCase -> A .)
    o               reduce using rule 9 (upperCase -> A .)
    p               reduce using rule 9 (upperCase -> A .)
    q               reduce using rule 9 (upperCase -> A .)
    r               reduce using rule 9 (upperCase -> A .)
    s               reduce using rule 9 (upperCase -> A .)
    t               reduce using rule 9 (upperCase -> A .)
    u               reduce using rule 9 (upperCase -> A .)
    v               reduce using rule 9 (upperCase -> A .)
    x               reduce using rule 9 (upperCase -> A .)
    w               reduce using rule 9 (upperCase -> A .)
    y               reduce using rule 9 (upperCase -> A .)
    z               reduce using rule 9 (upperCase -> A .)
    SPACE           reduce using rule 9 (upperCase -> A .)
    $end            reduce using rule 9 (upperCase -> A .)


state 8

    (10) upperCase -> B .

    A               reduce using rule 10 (upperCase -> B .)
    B               reduce using rule 10 (upperCase -> B .)
    C               reduce using rule 10 (upperCase -> B .)
    D               reduce using rule 10 (upperCase -> B .)
    E               reduce using rule 10 (upperCase -> B .)
    F               reduce using rule 10 (upperCase -> B .)
    G               reduce using rule 10 (upperCase -> B .)
    H               reduce using rule 10 (upperCase -> B .)
    I               reduce using rule 10 (upperCase -> B .)
    J               reduce using rule 10 (upperCase -> B .)
    K               reduce using rule 10 (upperCase -> B .)
    L               reduce using rule 10 (upperCase -> B .)
    M               reduce using rule 10 (upperCase -> B .)
    N               reduce using rule 10 (upperCase -> B .)
    O               reduce using rule 10 (upperCase -> B .)
    P               reduce using rule 10 (upperCase -> B .)
    Q               reduce using rule 10 (upperCase -> B .)
    R               reduce using rule 10 (upperCase -> B .)
    S               reduce using rule 10 (upperCase -> B .)
    T               reduce using rule 10 (upperCase -> B .)
    U               reduce using rule 10 (upperCase -> B .)
    V               reduce using rule 10 (upperCase -> B .)
    X               reduce using rule 10 (upperCase -> B .)
    W               reduce using rule 10 (upperCase -> B .)
    Y               reduce using rule 10 (upperCase -> B .)
    Z               reduce using rule 10 (upperCase -> B .)
    a               reduce using rule 10 (upperCase -> B .)
    b               reduce using rule 10 (upperCase -> B .)
    c               reduce using rule 10 (upperCase -> B .)
    d               reduce using rule 10 (upperCase -> B .)
    e               reduce using rule 10 (upperCase -> B .)
    f               reduce using rule 10 (upperCase -> B .)
    g               reduce using rule 10 (upperCase -> B .)
    h               reduce using rule 10 (upperCase -> B .)
    i               reduce using rule 10 (upperCase -> B .)
    j               reduce using rule 10 (upperCase -> B .)
    k               reduce using rule 10 (upperCase -> B .)
    l               reduce using rule 10 (upperCase -> B .)
    m               reduce using rule 10 (upperCase -> B .)
    n               reduce using rule 10 (upperCase -> B .)
    o               reduce using rule 10 (upperCase -> B .)
    p               reduce using rule 10 (upperCase -> B .)
    q               reduce using rule 10 (upperCase -> B .)
    r               reduce using rule 10 (upperCase -> B .)
    s               reduce using rule 10 (upperCase -> B .)
    t               reduce using rule 10 (upperCase -> B .)
    u               reduce using rule 10 (upperCase -> B .)
    v               reduce using rule 10 (upperCase -> B .)
    x               reduce using rule 10 (upperCase -> B .)
    w               reduce using rule 10 (upperCase -> B .)
    y               reduce using rule 10 (upperCase -> B .)
    z               reduce using rule 10 (upperCase -> B .)
    SPACE           reduce using rule 10 (upperCase -> B .)
    $end            reduce using rule 10 (upperCase -> B .)


state 9

    (11) upperCase -> C .

    A               reduce using rule 11 (upperCase -> C .)
    B               reduce using rule 11 (upperCase -> C .)
    C               reduce using rule 11 (upperCase -> C .)
    D               reduce using rule 11 (upperCase -> C .)
    E               reduce using rule 11 (upperCase -> C .)
    F               reduce using rule 11 (upperCase -> C .)
    G               reduce using rule 11 (upperCase -> C .)
    H               reduce using rule 11 (upperCase -> C .)
    I               reduce using rule 11 (upperCase -> C .)
    J               reduce using rule 11 (upperCase -> C .)
    K               reduce using rule 11 (upperCase -> C .)
    L               reduce using rule 11 (upperCase -> C .)
    M               reduce using rule 11 (upperCase -> C .)
    N               reduce using rule 11 (upperCase -> C .)
    O               reduce using rule 11 (upperCase -> C .)
    P               reduce using rule 11 (upperCase -> C .)
    Q               reduce using rule 11 (upperCase -> C .)
    R               reduce using rule 11 (upperCase -> C .)
    S               reduce using rule 11 (upperCase -> C .)
    T               reduce using rule 11 (upperCase -> C .)
    U               reduce using rule 11 (upperCase -> C .)
    V               reduce using rule 11 (upperCase -> C .)
    X               reduce using rule 11 (upperCase -> C .)
    W               reduce using rule 11 (upperCase -> C .)
    Y               reduce using rule 11 (upperCase -> C .)
    Z               reduce using rule 11 (upperCase -> C .)
    a               reduce using rule 11 (upperCase -> C .)
    b               reduce using rule 11 (upperCase -> C .)
    c               reduce using rule 11 (upperCase -> C .)
    d               reduce using rule 11 (upperCase -> C .)
    e               reduce using rule 11 (upperCase -> C .)
    f               reduce using rule 11 (upperCase -> C .)
    g               reduce using rule 11 (upperCase -> C .)
    h               reduce using rule 11 (upperCase -> C .)
    i               reduce using rule 11 (upperCase -> C .)
    j               reduce using rule 11 (upperCase -> C .)
    k               reduce using rule 11 (upperCase -> C .)
    l               reduce using rule 11 (upperCase -> C .)
    m               reduce using rule 11 (upperCase -> C .)
    n               reduce using rule 11 (upperCase -> C .)
    o               reduce using rule 11 (upperCase -> C .)
    p               reduce using rule 11 (upperCase -> C .)
    q               reduce using rule 11 (upperCase -> C .)
    r               reduce using rule 11 (upperCase -> C .)
    s               reduce using rule 11 (upperCase -> C .)
    t               reduce using rule 11 (upperCase -> C .)
    u               reduce using rule 11 (upperCase -> C .)
    v               reduce using rule 11 (upperCase -> C .)
    x               reduce using rule 11 (upperCase -> C .)
    w               reduce using rule 11 (upperCase -> C .)
    y               reduce using rule 11 (upperCase -> C .)
    z               reduce using rule 11 (upperCase -> C .)
    SPACE           reduce using rule 11 (upperCase -> C .)
    $end            reduce using rule 11 (upperCase -> C .)


state 10

    (12) upperCase -> D .

    A               reduce using rule 12 (upperCase -> D .)
    B               reduce using rule 12 (upperCase -> D .)
    C               reduce using rule 12 (upperCase -> D .)
    D               reduce using rule 12 (upperCase -> D .)
    E               reduce using rule 12 (upperCase -> D .)
    F               reduce using rule 12 (upperCase -> D .)
    G               reduce using rule 12 (upperCase -> D .)
    H               reduce using rule 12 (upperCase -> D .)
    I               reduce using rule 12 (upperCase -> D .)
    J               reduce using rule 12 (upperCase -> D .)
    K               reduce using rule 12 (upperCase -> D .)
    L               reduce using rule 12 (upperCase -> D .)
    M               reduce using rule 12 (upperCase -> D .)
    N               reduce using rule 12 (upperCase -> D .)
    O               reduce using rule 12 (upperCase -> D .)
    P               reduce using rule 12 (upperCase -> D .)
    Q               reduce using rule 12 (upperCase -> D .)
    R               reduce using rule 12 (upperCase -> D .)
    S               reduce using rule 12 (upperCase -> D .)
    T               reduce using rule 12 (upperCase -> D .)
    U               reduce using rule 12 (upperCase -> D .)
    V               reduce using rule 12 (upperCase -> D .)
    X               reduce using rule 12 (upperCase -> D .)
    W               reduce using rule 12 (upperCase -> D .)
    Y               reduce using rule 12 (upperCase -> D .)
    Z               reduce using rule 12 (upperCase -> D .)
    a               reduce using rule 12 (upperCase -> D .)
    b               reduce using rule 12 (upperCase -> D .)
    c               reduce using rule 12 (upperCase -> D .)
    d               reduce using rule 12 (upperCase -> D .)
    e               reduce using rule 12 (upperCase -> D .)
    f               reduce using rule 12 (upperCase -> D .)
    g               reduce using rule 12 (upperCase -> D .)
    h               reduce using rule 12 (upperCase -> D .)
    i               reduce using rule 12 (upperCase -> D .)
    j               reduce using rule 12 (upperCase -> D .)
    k               reduce using rule 12 (upperCase -> D .)
    l               reduce using rule 12 (upperCase -> D .)
    m               reduce using rule 12 (upperCase -> D .)
    n               reduce using rule 12 (upperCase -> D .)
    o               reduce using rule 12 (upperCase -> D .)
    p               reduce using rule 12 (upperCase -> D .)
    q               reduce using rule 12 (upperCase -> D .)
    r               reduce using rule 12 (upperCase -> D .)
    s               reduce using rule 12 (upperCase -> D .)
    t               reduce using rule 12 (upperCase -> D .)
    u               reduce using rule 12 (upperCase -> D .)
    v               reduce using rule 12 (upperCase -> D .)
    x               reduce using rule 12 (upperCase -> D .)
    w               reduce using rule 12 (upperCase -> D .)
    y               reduce using rule 12 (upperCase -> D .)
    z               reduce using rule 12 (upperCase -> D .)
    SPACE           reduce using rule 12 (upperCase -> D .)
    $end            reduce using rule 12 (upperCase -> D .)


state 11

    (13) upperCase -> E .

    A               reduce using rule 13 (upperCase -> E .)
    B               reduce using rule 13 (upperCase -> E .)
    C               reduce using rule 13 (upperCase -> E .)
    D               reduce using rule 13 (upperCase -> E .)
    E               reduce using rule 13 (upperCase -> E .)
    F               reduce using rule 13 (upperCase -> E .)
    G               reduce using rule 13 (upperCase -> E .)
    H               reduce using rule 13 (upperCase -> E .)
    I               reduce using rule 13 (upperCase -> E .)
    J               reduce using rule 13 (upperCase -> E .)
    K               reduce using rule 13 (upperCase -> E .)
    L               reduce using rule 13 (upperCase -> E .)
    M               reduce using rule 13 (upperCase -> E .)
    N               reduce using rule 13 (upperCase -> E .)
    O               reduce using rule 13 (upperCase -> E .)
    P               reduce using rule 13 (upperCase -> E .)
    Q               reduce using rule 13 (upperCase -> E .)
    R               reduce using rule 13 (upperCase -> E .)
    S               reduce using rule 13 (upperCase -> E .)
    T               reduce using rule 13 (upperCase -> E .)
    U               reduce using rule 13 (upperCase -> E .)
    V               reduce using rule 13 (upperCase -> E .)
    X               reduce using rule 13 (upperCase -> E .)
    W               reduce using rule 13 (upperCase -> E .)
    Y               reduce using rule 13 (upperCase -> E .)
